--- a/Personal/index.html
+++ b/Personal/index.html
@@ -42,10 +42,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Jose Meza</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2><span>Full-Stack Web Developer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -60,10 +60,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/cpjmeza" class="github"><i class="bi bi-github"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/jose-meza-543b98287/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
