Skills & Interests updated

--- a/Personal/index.html
+++ b/Personal/index.html
@@ -230,26 +230,26 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
-            <h3>Lorem Ipsum</h3>
+<i class="bi bi-airplane-engines" style="color: #dfab89;"></i>
+            <h3>Travel</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-            <h3>Dolor Sitema</h3>
+            <i class="bi bi-lungs" style="color: #06f158;"></i>
+            <h3>Bodybuilding/Exercising</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-            <h3>Sed perspiciatis</h3>
+            <i class="bi bi-music-player" style="color: #680707;"></i>
+            <h3>Music</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-            <h3>Magni Dolores</h3>
+            <i class="bi bi-code" style="color: #1100ffb4;"></i>
+            <h3>Coding </h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
