--- a/Personal/index.html
+++ b/Personal/index.html
@@ -425,28 +425,28 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Software Developer</h4>
+            <h5>2026 - Present</h5>
+            <p><em>Google </em></p>
             <p>
             <ul>
               <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Delegate tasks to members of the team and provide counsel on all aspects of the project. </li>
+              <li>Works at the intersection of software and systems engineering to design, build, and run large-scale systems scalably, reliably, and efficiently</li>
+              <li>Builds, tests, and deploys beautiful web, mobile, desktop and embedded apps from one codebase</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Web Developer </h4>
+            <h5>2024 - 2026</h5>
+            <p><em>Web Developer , Paypal, Houston, Tx</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+              <li>Responsible for writing well-designed, testable, efficient code by using best software development practices.</li>
               <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Recommended and consulted with clients on the most appropriate design</li>
+              <li>Create website layouts/user interfaces by using standard HTML/CSS practices and integrate data from various back-end services and databases</li>
             </ul>
             </p>
           </div>
