--- a/Personal/index.html
+++ b/Personal/index.html
@@ -468,25 +468,31 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class="bi bi-laptop"></i></div>
+            <h4><a href="">Front-End</a></h4>
+            <p>Ensure that website visitors can easily interact with the page</p>
+            <p>Code a website’s appearance, as well as take care of debugging</p>
+            <p>Create tools that improve site interaction</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class="bi bi-motherboard"></i></div>
+            <h4><a href="">Back-End</a></h4>
+            <p>Write, debug and document code that runs on the web server</p>
+            <p>Implement data protection and security protocols</p>
+            <p>Optimize the speed, efficiency and scalability of web applications</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class="bi bi-pc-display"></i></div>
+            <h4><a href="">Full-Stack</a></h4>
+            <p>Contribute to front-end and back-end development processes</p>
+            <p>Build new product features or APIs</p>
+            <p>Perform tests, troubleshoot software, and fix bugs</p>
           </div>
         </div>
 
