--- a/Personal/index.html
+++ b/Personal/index.html
@@ -755,6 +755,9 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
+    <div class="school link">
+      Part of <a href="https://www.altcademy.com">Altcademy</a>'s  Full-Stack Program
+    </div>
     Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
